--- a/Booking Appointment App/booking.html
+++ b/Booking Appointment App/booking.html
@@ -31,6 +31,7 @@
       <input type="submit" class="btn btn-warning" value="GET A CALL">
     </div>
     </form>
+    <ul id="userList"></ul>
     </div>
     <script src="booking.js"></script>
 </body>
