--- a/Crudcrud api/index.html
+++ b/Crudcrud api/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="form-center">
-    <form action="#" class="p-3" id="bookingForm">
+    <form class="p-3" id="bookingForm">
     <h2 class="text-center">Book an appointment</h2>
     <p class="text-center fs-6">Book a call slot and our representative will call you within 1hr of selected time.</p>
     <hr>
@@ -19,7 +19,7 @@
     <label for="mail" class="form-label">Email:</label><br>
     <input type="email" class="form-control" id="mail"><br>
     <label for="phone" class="form-label">Phone:</label><br>
-    <input type="text" id="phone" name="phone" class="form-control"><br>
+    <input type="text" id="phone" class="form-control"><br>
     <input type="submit" class="btn btn-warning" value="GET AN APPOINTMENT">
     </div>
     </form>
