--- a/Expense Tracker App/index.html
+++ b/Expense Tracker App/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Expense Tracker</title>
 </head>
 <body>
@@ -24,10 +25,6 @@
           <input type="number" class="form-control" id="expenseAmount">
         </div>
         <div class="col-md-3">
-          <label for="expenseDescription" class="form-label fw-bold">Enter description:</label>
-          <input type="text" class="form-control" id="expenseDescription">
-        </div>
-        <div class="col-md-3">
             <label for="expenseCategory" class="form-label fw-bold">Choose a category:</label>
             <select id="expenseCategory" class="form-select">
                 <option selected>Choose a category...</option>
@@ -38,6 +35,10 @@
                 <option>Travel</option>
                 <option>Others</option>
               </select>
+          </div>
+          <div class="col-md-3">
+            <label for="expenseDescription" class="form-label fw-bold">Enter description:</label>
+            <input type="text" class="form-control" id="expenseDescription">
           </div>
           <div class="col-md-2 mt-5">
             <input type="submit" class="btn btn-primary mb-2" id="addExpense" value="Add Expense">
